<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/button_up"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:layout_above="@+id/grits_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:text="@string/up"
        android:textScaleX="1.5"
        android:textSize="23sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_left"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:layout_centerVertical="true"
        android:layout_marginRight="10dp"
        android:layout_toLeftOf="@+id/grits_logo"
        android:text="@string/left"
        android:textScaleX="1.5"
        android:textSize="23sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_right"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:layout_centerVertical="true"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/grits_logo"
        android:text="@string/right"
        android:textScaleX="1.5"
        android:textSize="23sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_down"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:layout_below="@+id/grits_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/down"
        android:textScaleX="1.5"
        android:textSize="23sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/grits_logo"
        android:layout_width="250sp"
        android:layout_height="83sp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/grits"
        android:src="@drawable/grits_logo" />

    <Button
        android:id="@+id/reconnect_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@color/gray"
        android:padding="10dp"
        android:text="@string/reconnect"
        android:textStyle="bold" />

    <Button
        android:id="@+id/account_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@color/gray"
        android:padding="10dp"
        android:text="username@gmail.com"
        android:textStyle="bold" />

</RelativeLayout>